--- a/source/stylesheets/_code.sass
+++ b/source/stylesheets/_code.sass
@@ -7,6 +7,7 @@ pre
   background: #f8f8f8
   border-radius: 5px
   border: 1px solid #e5e5e5
+  line-height: normal
   overflow-x: auto
   white-space: pre
 
