--- a/source/stylesheets/_code.sass
+++ b/source/stylesheets/_code.sass
@@ -1,19 +1,24 @@
 pre, code
-  font-size: 0.8em
   font-family: 'Source Code Pro', monospace, serif
+  background: #f8f8f8
+  border: 1px solid #e5e5e5
 
 pre
   padding: 8px 15px
-  background: #f8f8f8
   border-radius: 5px
   border: 1px solid #e5e5e5
   line-height: normal
   overflow-x: auto
   white-space: pre
 
+  > code
+    border-radius: 0
+    border: none
+    padding: 0
+    white-space: pre
+
 code
-  background: #f8f8f8
+  font-size: 0.8em
   border-radius: 5px
-  border: 1px solid #e5e5e5
   padding: 1px 5px
   white-space: nowrap
