--- a/source/layouts/shared/_head.html.haml
+++ b/source/layouts/shared/_head.html.haml
@@ -2,7 +2,7 @@
 %meta{charset: "utf-8"}
 %meta{content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
 - if current_page.data.description
-  - raise "description too long" if current_page.data.description.length > 160
+  - raise "description must be less than 160 characters" if current_page.data.description.length > 160
   %meta{name: "description", content:"#{current_page.data.description}"}
 - if keywords(current_page.data)
   %meta{name: "keywords", content:"#{keywords(current_page.data)}"}
