--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -21,7 +21,9 @@ a
     background-color: transparent
     padding: 0
     border-radius: 0
+    box-shadow: 5px 0 0 transparent
     &:hover
+      box-shadow: 5px 0 0 transparent
       text-decoration: underline
       background-color: transparent
 
