--- a/source/layouts/shared/_head.html.erb
+++ b/source/layouts/shared/_head.html.erb
@@ -1,5 +1,5 @@
 <title>
-  <%= page_title %>
+  <%= web_page_title %>
 </title>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <meta charset="utf-8"/>
@@ -8,7 +8,7 @@
 <!-- SEO meta tags -->
 <meta name="description" content="<%= page_description %>"/>
 <meta name="twitter:card" content="summary">
-<meta property="og:title" content="<%= page_title %>"/>
+<meta property="og:title" content="<%= web_page_title %>"/>
 <meta name="og:description" content="<%= page_description %>"/>
 <meta property="og:image" content="https://lucybain.com/images/social-share.png" />
 <meta property="og:url" content="https://lucybain.com/" />
